<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mapFragment">

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.indoornavigation.ui.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map">
        <action
            android:id="@+id/action_mapFragment_to_debugFragment"
            app:destination="@id/debugFragment" />
        <action
            android:id="@+id/action_mapFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_mapFragment_to_pathfindingFragment"
            app:destination="@id/pathfindingFragment" />
    </fragment>

    <fragment
        android:id="@+id/debugFragment"
        android:name="com.example.indoornavigation.ui.debug.DebugFragment"
        android:label="@string/debug"
        tools:layout="@layout/fragment_debug">
        <action
            android:id="@+id/action_debugFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.indoornavigation.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
    </fragment>

    <fragment
        android:id="@+id/pathfindingFragment"
        android:name="com.example.indoornavigation.ui.pathfinding.PathfindingFragment"
        android:label="@string/navigation"
        tools:layout="@layout/fragment_pathfinding">
        <action
            android:id="@+id/action_pathfindingFragment_to_mapFragment"
            app:destination="@id/mapFragment" />
        <argument
            android:name="startPosition"
            app:argType="com.example.indoornavigation.data.models.Position" />
        <argument
            android:name="endPosition"
            app:argType="com.example.indoornavigation.data.models.Position" />
    </fragment>
</navigation>